{
    "version": 1,
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "74676823-131e-41a1-b79d-4cad72730255",
            "actions": [
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "c5ff2ce1-e697-4a84-84af-db4c3310af02",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchStance",
                    "type": "Button",
                    "id": "5d33de76-31a2-45b3-b27a-f3e2ed81b1ca",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "50919114-3d5a-4f2e-9183-6ca542f6a07c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e571f3c-1088-4ea1-a4ac-4a2029d0827c",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchStance",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}